--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -9,6 +9,13 @@ repos:
         language: system
         types: [go]
 
+      - id: golangci-lint
+        name: golangci-lint
+        entry: golangci-lint run --timeout 5m
+        language: system
+        pass_filenames: false
+        stages: [pre-commit]
+
       - id: go-test
         name: go test ./...
         entry: go test ./...
